<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_More"
    tools:context=".MoreAppsActivity">


    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@color/custom_greenish"
        app:titleTextColor="@color/white">

        <ImageView
            android:id="@+id/ic_back_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:contentDescription="@string/back_button"
            android:padding="5dp"
            android:src="@drawable/ic_arrow_back_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/lato_regular"
            android:text="@string/more_apps"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"

            />

    </androidx.appcompat.widget.Toolbar>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:columnCount="2"
        android:paddingHorizontal="10dp"
        android:paddingTop="30dp"
        android:paddingBottom="10dp"
        android:paddingVertical="30dp"
        android:rowCount="2">

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/flirttime"
            android:layout_margin="10dp"
            android:background="@drawable/custom_bg_more"
            android:padding="10dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:layout_centerHorizontal="true"
                android:paddingTop="10dp"
                android:src="@drawable/ic_flirttime_logo"
                android:contentDescription="@string/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/flirt_time"
                android:textAlignment="center"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="150dp"
            android:id="@+id/secretsetting"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:background="@drawable/custom_bg_more"
            android:padding="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:layout_centerHorizontal="true"
                android:paddingTop="10dp"
                android:src="@drawable/ic_secretsetting_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/secret_setting"
                android:textAlignment="center"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="150dp"
            android:id="@+id/lekhajokha"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:background="@drawable/custom_bg_more"
            android:padding="10dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:layout_centerHorizontal="true"
                android:paddingTop="10dp"
                android:src="@drawable/ic_lekhajokha_logo"
                android:contentDescription="@string/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/lekha_jokha"
                android:textAlignment="center"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="20sp" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="150dp"
            android:id="@+id/expensemanager"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:background="@drawable/custom_bg_more"
            android:padding="10dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:paddingTop="10dp"
                android:src="@drawable/ic_expensemanager_logo"
                android:contentDescription="@string/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:layout_alignParentBottom="true"
                android:text="@string/expense_manager"
                android:textAlignment="center"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="20sp" />

        </RelativeLayout>



    </GridLayout>

</RelativeLayout>